--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -108,8 +108,9 @@
 
                         <TextBox x:Name="filename"
                              Margin="20"
-                             Grid.Column="0"/>
-                        <Button Grid.Column="1" Margin="10" FontFamily="Lato" Foreground="White">Browse Files</Button>
+                             Grid.Column="0"
+                             Text="{Binding FileName}"/>
+                        <Button Grid.Column="1" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding BrowseCommand}">Browse Files</Button>
                         <Button Grid.Column="2" Margin="10" FontFamily="Lato" Foreground="White">Run</Button>
                     </Grid>
                 </StackPanel>
