--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,20 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LogAnalysisTool" xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+        xmlns:local="clr-namespace:LogAnalysisTool" xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" xmlns:converters="clr-namespace:LogAnalysisTool.Converters"
         mc:Ignorable="d"
         Title="Log Analysis Tool" Height="800" Width="1250" Background="White" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
         
-
+    <!--OpenFileDialogService Behavior-->
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:OpenFileDialogService />
     </dxmvvm:Interaction.Behaviors>
-
+    
+    <!--DataContext Definition-->
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
     
-    <!--Overall Grid-->
+    <!--Overall Grid Definition-->
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230"/>
@@ -84,38 +85,65 @@
             </Menu>
         </StackPanel>
         
-        <!--GroupBox Grid-->
+        <!--Main Application Grid Definition-->
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-
+            
+            <!--Log File Information GroupBox-->
             <GroupBox Grid.Row="0"
                       Margin="10"
                       Header="Select Log File"
                       FontFamily="Lato">
-
+                
+                <!--Log File Information StackPanel-->
                 <StackPanel>
-                    <!--TextBox & Button Grid-->
+                    <!--TextBox & Button Grid Definition-->
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="720" />
+                            <ColumnDefinition Width="600" />
+                            <ColumnDefinition Width="130" />
                             <ColumnDefinition Width="130" />
                             <ColumnDefinition Width="130" />
                         </Grid.ColumnDefinitions>
-
-                        <TextBox x:Name="filename"
+                        
+                        <!--Filename TextBox-->
+                        <TextBox x:Name="fileName"
                              Margin="20"
                              Grid.Column="0"
                              Text="{Binding FileName}"/>
-                        <Button Grid.Column="1" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding BrowseCommand}">Browse Files</Button>
-                        <Button Grid.Column="2" Margin="10" FontFamily="Lato" Foreground="White">Run</Button>
+                        
+                        <!--Log Type Selection ComboBox-->
+                        <!--TODO: Re-style combobox-->
+                        <ComboBox Grid.Column="1" Width="100" Height="20" SelectedItem="{Binding LogType,Mode=OneWay}" x:Name="logType">
+                            <dxmvvm:Interaction.Behaviors>
+                                <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:LogType}" />
+                            </dxmvvm:Interaction.Behaviors>
+                        </ComboBox>
+
+                        <!--Browse File Button-->
+                        <Button Grid.Column="2" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding BrowseCommand}">Browse Files</Button>
+                        
+                        <!--Run Button-->
+                        <Button Grid.Column="3" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding RunAnalysisCommand}" Content="Run">
+                            <Button.Resources>
+                                <converters:RunEnabledConverter x:Key="runEnabledConverter"/>
+                            </Button.Resources>
+                            <Button.IsEnabled>
+                                <MultiBinding Converter="{StaticResource runEnabledConverter}">
+                                    <Binding ElementName="fileName" Path="Text" />
+                                    <Binding ElementName="logType" Path="SelectedItem" />
+                                </MultiBinding>
+                            </Button.IsEnabled>
+                        </Button>
                     </Grid>
                 </StackPanel>
             </GroupBox>
-
+            
+            <!--Cycle Information Grid Definition-->
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -126,19 +154,22 @@
                 <TextBlock Grid.Row="0" Margin="10" FontFamily="Lato">Current File:</TextBlock>
 
                 <!--Vulnerability Count TextBlock-->
-                <TextBlock Grid.Row="1" Margin="10" FontFamily="Lato">Vulnerabilities Found In Current Cycle: 0</TextBlock>
-                
+                <TextBlock Grid.Row="1" Margin="10" FontFamily="Lato">
+                    <Run>Vulnerabilities Found In Current Cycle: </Run>
+                    <Run Text="{Binding Vulnerabilities.Count, Mode=OneWay}"/>
+                </TextBlock>
             </Grid>
 
-            <!--Vulnerability List-->
-            <ListView x:Name="VulnerabilityList"
+            <!--Vulnerability List ListView-->
+            <ListView x:Name="Issues"
                   Grid.Row="2"
+                  ItemsSource="{Binding Vulnerabilities}"
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Width="100" Header="Line Number"/>
-                        <GridViewColumn Width="100" Header="Place Holder"/>
+                        <GridViewColumn Width="100" Header="Line Number" DisplayMemberBinding="{Binding LineNumber}"/>
+                        <GridViewColumn Width="100" Header="Test Name" DisplayMemberBinding="{Binding TestDetected.Name}"/>
                         <GridViewColumn Width="100" Header="Place Holder"/>
                         <GridViewColumn Width="100" Header="Place Holder"/>
                     </GridView>
