--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LogAnalysisTool" xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" xmlns:converters="clr-namespace:LogAnalysisTool.Converters"
         mc:Ignorable="d"
-        Title="Log Analysis Tool" Height="800" Width="1250" Background="White" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Log Analysis Tool" Height="800" Width="1275" Background="WhiteSmoke" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
         
     <!--OpenFileDialogService Behavior-->
     <dxmvvm:Interaction.Behaviors>
@@ -26,7 +26,7 @@
 
         <!--Menu StackPanel-->
         <StackPanel Grid.Column="0"
-                    Background="#303670"
+                    Background="#b19cd9"
                     Width="230"
                     Orientation="Vertical"
                     HorizontalAlignment="Left">
@@ -91,14 +91,24 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            
+
+            <TextBlock Grid.Row="0"
+                       Margin="10"
+                       FontFamily="Lato"
+                       Text="Log Analysis"
+                       FontSize="25"
+                       FontWeight="Thin"/>
+
             <!--Log File Information GroupBox-->
-            <GroupBox Grid.Row="0"
+            <GroupBox Grid.Row="1"
                       Margin="10"
-                      Header="Select Log File"
-                      FontFamily="Lato">
-                
+                      FontFamily="Lato"
+                      Background="#b19cd9"
+                      BorderThickness="0"
+                      >
+
                 <!--Log File Information StackPanel-->
                 <StackPanel>
                     <!--TextBox & Button Grid Definition-->
@@ -109,26 +119,26 @@
                             <ColumnDefinition Width="130" />
                             <ColumnDefinition Width="130" />
                         </Grid.ColumnDefinitions>
-                        
+
                         <!--Filename TextBox-->
                         <TextBox x:Name="fileName"
-                             Margin="20"
                              Grid.Column="0"
-                             Text="{Binding FileName}"/>
+                             Text="{Binding FileName}"
+                             Style="{StaticResource TextBox}"/>
                         
                         <!--Log Type Selection ComboBox-->
                         <!--TODO: Re-style combobox-->
-                        <ComboBox Grid.Column="1" Width="100" Height="20" SelectedItem="{Binding LogType,Mode=OneWay}" x:Name="logType">
+                        <ComboBox Grid.Column="1" Margin="10" SelectedItem="{Binding LogType,Mode=OneWay}" x:Name="logType">
                             <dxmvvm:Interaction.Behaviors>
                                 <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:LogType}" />
                             </dxmvvm:Interaction.Behaviors>
                         </ComboBox>
 
                         <!--Browse File Button-->
-                        <Button Grid.Column="2" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding BrowseCommand}">Browse Files</Button>
-                        
+                        <Button Grid.Column="2" Margin="10" FontFamily="Lato" Command="{Binding BrowseCommand}" Style ="{StaticResource Button}" Content="Browse Files"/> 
+
                         <!--Run Button-->
-                        <Button Grid.Column="3" Margin="10" FontFamily="Lato" Foreground="White" Command="{Binding RunAnalysisCommand}" Content="Run">
+                        <Button Grid.Column="3" Margin="10" FontFamily="Lato" Command="{Binding RunAnalysisCommand}" Style="{StaticResource Button}" Content="Run">
                             <Button.Resources>
                                 <converters:RunEnabledConverter x:Key="runEnabledConverter"/>
                             </Button.Resources>
@@ -142,39 +152,58 @@
                     </Grid>
                 </StackPanel>
             </GroupBox>
-            
-            <!--Cycle Information Grid Definition-->
-            <Grid Grid.Row="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
 
-                <!--Current File TextBlock-->
-                <TextBlock Grid.Row="0" Margin="10" FontFamily="Lato">Current File:</TextBlock>
+            <GroupBox Grid.Row="2"
+                      Margin="10"
+                      FontFamily="Lato"
+                      Background="#b19cd9"
+                      BorderThickness="0">
 
-                <!--Vulnerability Count TextBlock-->
-                <TextBlock Grid.Row="1" Margin="10" FontFamily="Lato">
+                <!--Cycle Information Grid Definition-->
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <!--Current File TextBlock-->
+                    <TextBlock Grid.Row="0" Margin="10" FontFamily="Lato" Foreground="White">
+                    <Run>Current File: </Run>
+                    <Run Text="{Binding FileName}"/>
+                    </TextBlock>
+
+                    <!--Vulnerability Count TextBlock-->
+                    <TextBlock Grid.Row="1" Margin="10" FontFamily="Lato" Foreground="White">
                     <Run>Vulnerabilities Found In Current Cycle: </Run>
                     <Run Text="{Binding Vulnerabilities.Count, Mode=OneWay}"/>
-                </TextBlock>
-            </Grid>
+                    </TextBlock>
+                </Grid>
+            </GroupBox>
 
-            <!--Vulnerability List ListView-->
-            <ListView x:Name="Vulnerabilities"
-                  Grid.Row="2"
+            <GroupBox Grid.Row="3"
+                      Margin="10"
+                      FontFamily="Lato"
+                      Background="#b19cd9"
+                      BorderThickness="0"
+                      Height="520">
+
+                <!--Vulnerability List ListView-->
+                <ListView x:Name="Vulnerabilities"
+                  Grid.Row="3"
                   ItemsSource="{Binding Vulnerabilities}"
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Width="100" Header="Line Number" DisplayMemberBinding="{Binding LineNumber}"/>
-                        <GridViewColumn Width="250" Header="Test Name" DisplayMemberBinding="{Binding TestDetected.Name}"/>
-                        <GridViewColumn Width="250" Header="Test Description" DisplayMemberBinding="{Binding TestDetected.Description}"/>
-                        <GridViewColumn Width="500" Header="Log Entry" DisplayMemberBinding="{Binding LogEntry}"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="75" Header="Line Number" DisplayMemberBinding="{Binding LineNumber}"/>
+                            <GridViewColumn Width="150" Header="Test Name" DisplayMemberBinding="{Binding TestDetected.Name}"/>
+                            <GridViewColumn Width="250" Header="Test Description" DisplayMemberBinding="{Binding TestDetected.Description}"/>
+                            <GridViewColumn Width="2000" Header="Log Entry" DisplayMemberBinding="{Binding LogEntry}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+            </GroupBox>
         </Grid>
     </Grid>
 </Window>
