--- a/Themes/TextBoxTheme.xaml
+++ b/Themes/TextBoxTheme.xaml
@@ -1,46 +1,44 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type TextBox}"
-           x:Key="TextBox">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="TextBox" TargetType="{x:Type TextBox}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10"
-                        Background="White"
-                        Width="580"
-                        Height="30">
+                    <Border Width="580"
+                            Height="30"
+                            Background="White"
+                            CornerRadius="10">
 
                         <Grid>
-                            <Rectangle StrokeThickness="1"/>
-                            <TextBox Margin="1"
-                                     Text="{TemplateBinding Text}"
-                                     BorderThickness="0"
-                                     Background="Transparent"
+                            <Rectangle StrokeThickness="1" />
+                            <TextBox x:Name="FileNameTextBox"
+                                     Margin="1"
                                      VerticalContentAlignment="Center"
-                                     Padding="5"
+                                     Background="Transparent"
+                                     BorderThickness="0"
                                      Foreground="Black"
-                                     x:Name="FileNameTextBox"/>
+                                     Padding="5"
+                                     Text="{TemplateBinding Text}" />
 
-                            <TextBlock IsHitTestVisible="False"
-                                       Text="File Name"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Left"
+                            <TextBlock Grid.Column="1"
                                        Margin="10,0,0,0"
+                                       HorizontalAlignment="Left"
+                                       VerticalAlignment="Center"
                                        FontSize ="11"
                                        Foreground="Black"
-                                       Grid.Column="1">
+                                       IsHitTestVisible="False"
+                                       Text="File Name">
 
                                 <TextBlock.Style>
                                     <Style TargetType="{x:Type TextBlock}">
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=FileNameTextBox}" Value="">
-                                                <Setter Property="Visibility" Value="Visible"/>
+                                            <DataTrigger Value="" Binding="{Binding Text, ElementName=FileNameTextBox}">
+                                                <Setter Property="Visibility" Value="Visible" />
                                             </DataTrigger>
                                         </Style.Triggers>
-                                        <Setter Property="Visibility" Value="Hidden"/>
+                                        <Setter Property="Visibility" Value="Hidden" />
                                     </Style>
                                 </TextBlock.Style>
-                                
+
                             </TextBlock>
 
 
