--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,10 +1,9 @@
-﻿<Window x:Class="LogAnalysisTool.MainWindow"
+﻿<Window x:Class="LogAnalysisTool.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:converters="clr-namespace:LogAnalysisTool.Converters"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-        xmlns:local="clr-namespace:LogAnalysisTool"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodels="clr-namespace:LogAnalysisTool.ViewModels"
         xmlns:views="clr-namespace:LogAnalysisTool.Views"
